--- a/BSModManager/BSModManager.csproj
+++ b/BSModManager/BSModManager.csproj
@@ -57,6 +57,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Models\ConfigFileManager.cs" />
+    <Compile Include="Models\MainWindowPropertyModel.cs" />
     <Compile Include="Models\VersionManager.cs" />
     <Compile Include="Static\FolderManager.cs" />
     <Compile Include="Views\SettingsTab.xaml.cs">
