All Checked/Uncheckedボタン実装とValue付け忘れ修正

--- a/BSModManager/BSModManager.csproj
+++ b/BSModManager/BSModManager.csproj
@@ -57,7 +57,8 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Models\ConfigFileManager.cs" />
-    <Compile Include="Models\MainWindowPropertyModel.cs" />
+    <Compile Include="Models\ViewModelPropertyModel\MainTabPropertyModel.cs" />
+    <Compile Include="Models\ViewModelPropertyModel\MainWindowPropertyModel.cs" />
     <Compile Include="Models\VersionManager.cs" />
     <Compile Include="Static\FolderManager.cs" />
     <Compile Include="Views\SettingsTab.xaml.cs">
