とりあえず使いそうなの突っ込んだ

--- a/BSModManager/BSModManager.csproj
+++ b/BSModManager/BSModManager.csproj
@@ -38,6 +38,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.IO.Compression" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -57,14 +58,35 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Models\ConfigFileManager.cs" />
+    <Compile Include="Models\CoreManager\DataManager.cs" />
+    <Compile Include="Models\CoreManager\GitHubManager.cs" />
+    <Compile Include="Models\CoreManager\InnerData.cs" />
+    <Compile Include="Models\CoreManager\ModAssistantManager.cs" />
+    <Compile Include="Models\CoreManager\Structure\GitHubModInformationCsv.cs" />
+    <Compile Include="Models\CoreManager\Structure\MAModInformationCsv.cs" />
+    <Compile Include="Models\CoreManager\Structure\ModAssistantModInformation.cs" />
     <Compile Include="Models\ViewModelCommonProperty\MainTabPropertyModel.cs" />
     <Compile Include="Models\ViewModelCommonProperty\MainWindowPropertyModel.cs" />
     <Compile Include="Models\VersionManager.cs" />
     <Compile Include="Models\ViewModelCommonProperty\SettingsTabPropertyModel.cs" />
+    <Compile Include="Models\ViewModelCommonProperty\UpdateMyselfConfirmPropertyModel.cs" />
+    <Compile Include="Static\FilePath.cs" />
     <Compile Include="Static\FolderManager.cs" />
+    <Compile Include="ViewModels\InitialSettingViewModel.cs" />
+    <Compile Include="ViewModels\UpdateMyselfConfirmViewModel.cs" />
+    <Compile Include="Views\InitialSetting.xaml.cs">
+      <DependentUpon>InitialSetting.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\SettingsTab.xaml.cs">
       <DependentUpon>SettingsTab.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\UpdateMyselfConfirm.xaml.cs">
+      <DependentUpon>UpdateMyselfConfirm.xaml</DependentUpon>
+    </Compile>
+    <Page Include="Views\InitialSetting.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\MainTab.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -91,6 +113,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="Views\UpdateMyselfConfirm.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -116,12 +142,21 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="CsvHelper">
+      <Version>27.2.1</Version>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.1</Version>
+    </PackageReference>
+    <PackageReference Include="Octokit">
+      <Version>0.51.0</Version>
     </PackageReference>
     <PackageReference Include="Prism.DryIoc" Version="8.1.97" />
     <PackageReference Include="ReactiveProperty">
       <Version>8.0.5</Version>
+    </PackageReference>
+    <PackageReference Include="System.IO.Compression.ZipFile">
+      <Version>4.3.0</Version>
     </PackageReference>
     <PackageReference Include="WindowsAPICodePack-Shell">
       <Version>1.1.1</Version>
