--- a/BSModManager/BSModManager.csproj
+++ b/BSModManager/BSModManager.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Models\CoreManager\Structure\GitHubModInformationCsv.cs" />
     <Compile Include="Models\CoreManager\Structure\MAModInformationCsv.cs" />
     <Compile Include="Models\CoreManager\Structure\ModAssistantModInformation.cs" />
+    <Compile Include="Models\ViewModelCommonProperty\ChangeModInfoPropertyModel.cs" />
     <Compile Include="Models\ViewModelCommonProperty\MainTabPropertyModel.cs" />
     <Compile Include="Models\ViewModelCommonProperty\MainWindowPropertyModel.cs" />
     <Compile Include="Models\VersionManager.cs" />
@@ -72,8 +73,12 @@
     <Compile Include="Models\ViewModelCommonProperty\UpdateMyselfConfirmPropertyModel.cs" />
     <Compile Include="Static\FilePath.cs" />
     <Compile Include="Static\FolderManager.cs" />
+    <Compile Include="ViewModels\ChangeModInfoViewModel.cs" />
     <Compile Include="ViewModels\InitialSettingViewModel.cs" />
     <Compile Include="ViewModels\UpdateMyselfConfirmViewModel.cs" />
+    <Compile Include="Views\ChangeModInfo.xaml.cs">
+      <DependentUpon>ChangeModInfo.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\InitialSetting.xaml.cs">
       <DependentUpon>InitialSetting.xaml</DependentUpon>
     </Compile>
@@ -83,6 +88,10 @@
     <Compile Include="Views\UpdateMyselfConfirm.xaml.cs">
       <DependentUpon>UpdateMyselfConfirm.xaml</DependentUpon>
     </Compile>
+    <Page Include="Views\ChangeModInfo.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\InitialSetting.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
