--- a/BSModManager/BSModManager.csproj
+++ b/BSModManager/BSModManager.csproj
@@ -62,7 +62,7 @@
     <Compile Include="Models\CoreManager\GitHubManager.cs" />
     <Compile Include="Models\CoreManager\InnerData.cs" />
     <Compile Include="Models\CoreManager\ModAssistantManager.cs" />
-    <Compile Include="Models\CoreManager\Structure\GitHubModInformationCsv.cs" />
+    <Compile Include="Models\CoreManager\Structure\ModInformationCsv.cs" />
     <Compile Include="Models\CoreManager\Structure\MAModInformationCsv.cs" />
     <Compile Include="Models\CoreManager\Structure\ModAssistantModInformation.cs" />
     <Compile Include="Models\ViewModelCommonProperty\ChangeModInfoPropertyModel.cs" />
