ボタンにアイコンを追加

--- a/BSModManager/BSModManager.csproj
+++ b/BSModManager/BSModManager.csproj
@@ -38,6 +38,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.IO.Compression" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
@@ -71,6 +72,11 @@
     <Compile Include="Models\VersionManager.cs" />
     <Compile Include="Models\ViewModelCommonProperty\SettingsTabPropertyModel.cs" />
     <Compile Include="Models\ViewModelCommonProperty\UpdateMyselfConfirmPropertyModel.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Static\FilePath.cs" />
     <Compile Include="Static\FolderManager.cs" />
     <Compile Include="ViewModels\ChangeModInfoViewModel.cs" />
@@ -139,11 +145,6 @@
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
@@ -152,6 +153,7 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -182,6 +184,29 @@
       <Version>1.1.1</Version>
     </PackageReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Views\Resources\URL.png" />
+    <Resource Include="Views\Resources\Refresh.png" />
+    <Resource Include="Views\Resources\Update.png" />
+    <Resource Include="Views\Resources\Install.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Views\URL.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Views\Resources\Check.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Views\Update.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Views\Resources\Setting.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Views\Resources\ChangeData.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Views\Resources\Execute.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
