--- a/BSModManager/BSModManager.csproj
+++ b/BSModManager/BSModManager.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Models\CoreManager\Structure\ModInformationCsv.cs" />
     <Compile Include="Models\CoreManager\Structure\MAModInformationCsv.cs" />
     <Compile Include="Models\CoreManager\Structure\ModAssistantModInformation.cs" />
+    <Compile Include="Models\ModsDataModel.cs" />
     <Compile Include="Models\ViewModelCommonProperty\ChangeModInfoPropertyModel.cs" />
     <Compile Include="Models\ViewModelCommonProperty\UpdateTabPropertyModel.cs" />
     <Compile Include="Models\ViewModelCommonProperty\MainWindowPropertyModel.cs" />
