--- a/BSModManager/BSModManager.csproj
+++ b/BSModManager/BSModManager.csproj
@@ -67,7 +67,7 @@
     <Compile Include="Models\CoreManager\Structure\ModInformationCsv.cs" />
     <Compile Include="Models\CoreManager\Structure\MAModInformationCsv.cs" />
     <Compile Include="Models\CoreManager\Structure\ModAssistantModInformation.cs" />
-    <Compile Include="Models\ModsDataModel.cs" />
+    <Compile Include="Models\LocalModsDataModel.cs" />
     <Compile Include="Models\PastModsDataModel.cs" />
     <Compile Include="Models\RecommendModsDataModel.cs" />
     <Compile Include="Models\ViewModelCommonProperty\ChangeModInfoPropertyModel.cs" />
