一部のクラス名変更したのとネスト解消

--- a/BSModManager/BSModManager.csproj
+++ b/BSModManager/BSModManager.csproj
@@ -60,16 +60,16 @@
     </ApplicationDefinition>
     <Compile Include="Interfaces\IMods.cs" />
     <Compile Include="Interfaces\IModData.cs" />
-    <Compile Include="Models\ConfigFile.cs" />
+    <Compile Include="Models\ConfigFileHandler.cs" />
     <Compile Include="Models\LocalModsDataFetcher.cs" />
     <Compile Include="Models\PastModsDataFetcher.cs" />
     <Compile Include="Models\Syncer.cs" />
-    <Compile Include="Models\Initializer.cs" />
+    <Compile Include="Models\InitialDirectorySetup.cs" />
     <Compile Include="Models\ModDisposer.cs" />
     <Compile Include="Models\GitHubApi.cs" />
     <Compile Include="Models\ModInstaller.cs" />
     <Compile Include="Models\Mods\MAMods.cs" />
-    <Compile Include="Models\ModCsv.cs" />
+    <Compile Include="Models\ModCsvHandler.cs" />
     <Compile Include="Models\Mods\LocalMods.cs" />
     <Compile Include="Models\ModUpdater.cs" />
     <Compile Include="Models\Mods\PastMods.cs" />
