--- a/BSModManager/BSModManager.csproj
+++ b/BSModManager/BSModManager.csproj
@@ -204,6 +204,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Models\Mods\RecommendMods.json" />
     <None Include="BSModManager_TemporaryKey.pfx" />
+    <None Include="ClassDiagram.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
