--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,5 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /BSModManager/Views/Resources
+# https://kitunechan.hatenablog.jp/entry/2016/05/27/103118
+/Setup/DISABLEADVTSHORTCUTS.vbs
