--- a/BSModManager/BSModManager.csproj
+++ b/BSModManager/BSModManager.csproj
@@ -128,6 +128,7 @@
     <Compile Include="ViewModels\ChangeModInfoViewModel.cs" />
     <Compile Include="ViewModels\InitialSettingViewModel.cs" />
     <Compile Include="ViewModels\InstallTabViewModel.cs" />
+    <Compile Include="ViewModels\LicenseTabViewModel.cs" />
     <Compile Include="ViewModels\UpdateMyselfConfirmViewModel.cs" />
     <Compile Include="Views\ChangeModInfo.xaml.cs">
       <DependentUpon>ChangeModInfo.xaml</DependentUpon>
@@ -137,6 +138,9 @@
     </Compile>
     <Compile Include="Views\InstallTab.xaml.cs">
       <DependentUpon>InstallTab.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\LicenseTab.xaml.cs">
+      <DependentUpon>LicenseTab.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\SettingsTab.xaml.cs">
       <DependentUpon>SettingsTab.xaml</DependentUpon>
@@ -153,6 +157,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\InstallTab.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\LicenseTab.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -261,6 +269,9 @@
     <Resource Include="Views\Resources\Setting.png" />
     <Resource Include="Views\Resources\Update.png" />
     <Resource Include="Views\Resources\URL.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Views\Resources\License.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
