--- a/BSModManager/BSModManager.csproj
+++ b/BSModManager/BSModManager.csproj
@@ -216,24 +216,24 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CsvHelper">
-      <Version>27.2.1</Version>
+    <PackageReference Include="Csv">
+      <Version>2.0.93</Version>
     </PackageReference>
     <PackageReference Include="Expression.Blend.Sdk.WPF">
       <Version>1.0.1</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Bcl.AsyncInterfaces">
-      <Version>6.0.0</Version>
+      <Version>7.0.0</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
-      <Version>13.0.1</Version>
+      <Version>13.0.3</Version>
     </PackageReference>
     <PackageReference Include="Octokit">
-      <Version>0.51.0</Version>
+      <Version>5.0.4</Version>
     </PackageReference>
     <PackageReference Include="Prism.DryIoc" Version="8.1.97" />
     <PackageReference Include="ReactiveProperty">
-      <Version>8.1.1</Version>
+      <Version>9.1.2</Version>
     </PackageReference>
     <PackageReference Include="System.IO.Compression.ZipFile">
       <Version>4.3.0</Version>
